--- a/requirements.txt
+++ b/requirements.txt
@@ -6,10 +6,10 @@ blinker==1.6.2
 charset-normalizer==3.1.0
 click==8.1.3
 colorama==0.4.6
-discord==2.2.3
 discord.py==2.2.3
-Flask==2.3.2
+Flask==2.2.5
 frozenlist==1.3.3
+gunicorn==20.1.0
 idna==3.4
 importlib-metadata==6.6.0
 itsdangerous==2.1.2
