--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 aiohttp==3.8.4
 aiosignal==1.3.1
+anyio==3.6.2
 async-timeout==4.0.2
 attrs==23.1.0
 CacheControl==0.12.11
@@ -7,8 +8,11 @@ cachetools==5.3.0
 certifi==2023.5.7
 cffi==1.15.1
 charset-normalizer==3.1.0
+click==8.1.3
+colorama==0.4.6
 cryptography==40.0.2
 discord.py==2.2.3
+fastapi==0.95.2
 firebase-admin==6.1.0
 frozenlist==1.3.3
 gcloud==0.18.3
@@ -24,6 +28,7 @@ google-resumable-media==2.5.0
 googleapis-common-protos==1.59.0
 grpcio==1.54.2
 grpcio-status==1.54.2
+h11==0.14.0
 httplib2==0.22.0
 idna==3.4
 jws==0.1.3
@@ -36,6 +41,7 @@ pyasn1==0.5.0
 pyasn1-modules==0.3.0
 pycparser==2.21
 pycryptodome==3.18.0
+pydantic==1.10.8
 PyJWT==2.7.0
 pyparsing==3.0.9
 Pyrebase4==4.7.0
@@ -44,6 +50,10 @@ requests==2.30.0
 requests-toolbelt==1.0.0
 rsa==4.9
 six==1.16.0
+sniffio==1.3.0
+starlette==0.27.0
+typing_extensions==4.6.2
 uritemplate==4.1.1
 urllib3==1.26.15
+uvicorn==0.22.0
 yarl==1.9.2
